# thermo_analysis

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
src/: __init__.py
src/thermo_analysis/: functions.py
src/thermo_analysis.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
