[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "thermo-analysis"  # ATENÇÃO: Deve ser único no PyPI
version = "0.1"
authors = [
  { name="Luís Gustavo Martins Amaral Alécio Gomes", email="lg.amaral.02@gmail.com" },
]
description = "A python library for analysis and processing of biomedical thermographic images."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/luisgustavo02/thermo_analysis"
"Bug Tracker" = "https://github.com/seu_usuario/seu_repo/issues"

[tool.setuptools.package-data]
"thermo_analysis" = ["*.png", "assets/*.png"]  # Inclui PNGs dentro do pacote